--- a/package.json
+++ b/package.json
@@ -19,6 +19,12 @@
     "connect": "~2.5.0",
     "underscore": "~1.4.1",
     "uuid-pure": "~1.0.10",
-    "nano": "~3.3.2"
+    "nano": "~3.3.2",
+    "string": "~1.3.0",
+    "inflection": "~1.2.5"
+  },
+  "devDependencies": {
+    "request": "~2.16.6",
+    "Faker": "~0.5.8"
   }
 }
